--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -45,10 +45,17 @@
     justify-content: space-around;
     align-items: center;
     padding: 20px;
+    flex-wrap: wrap;
 }
 
 .FooterRightLink{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 10px;
+}
+
+.FooterLeftLink{
+    margin-top: 10px;
+
 }
